[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Стацюк Виталий <vis7trd@yandex.ru>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
validators = "^0.20.0"
coverage = "^6.5.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
